src/App.css
.header {
  grid-area: header;
  position: relative;
}

.search-bar__wrapper {
  grid-area: search-bar;
  position: relative;
  border-bottom: 2px solid var(--searchBar-tags);
  display: grid;
  grid-template-columns: 1fr 2fr;
}

.latest-news {
  grid-area: latest-news;
}

.key-stats {
  grid-area: key-stats;
}

.company-overview {
  position: relative;
  grid-area: company-overview;
}

.peers {
  grid-area: peers;
}

#root {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.grid-container {
  display: grid;
  grid-column-gap: 55px;
  grid-row-gap: 4px;
  grid-template-columns: 1fr 1fr 1fr;
  grid-template-areas:
    "header header header"
    "chart chart latest-news"
    "key-stats key-stats company-overview";
  color: #ffffff;
  padding: 10px 45px 40px;
  margin: 0px auto 0px;
  max-width: 1500px;
  overflow: auto;
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  flex: 1 1 0px;
}

.search-bar {
  margin-bottom: 6px;
  position: relative;
  grid-column: 1 / 3;
  grid-row: 1;
  padding-left: 28px;
}

.quotes {
  grid-column: 3;
  grid-row: 1;
  text-align: right;
  margin-bottom: 4px;
}

@media only screen and (max-width: 1200px) {
  .grid-container {
    grid-template-areas: "header header header" "chart chart chart" "latest-news latest-news latest-news" "key-stats  key-stats key-stats" "company-overview company-overview company-overview";
    padding: 5px 20px;
  }
}

@media only screen and (max-width: 650px) {
  .quotes {
    grid-column: 1 / 4;
    grid-row: 1;
  }
  .search-bar {
    grid-column: 1 / 4;
    grid-row: 2;
  }
}

